<resources>
    <string name="app_name">Games</string>
    <string name="edtLogin">E-mail</string>
    <string name="edtSenha">Password</string>
    <string name="btnlogin">Entrar</string>
    <string name="tvPergunta">Ainda não tem conta?</string>
    <string name="btnCadastrar">Cadastrar usuario</string>

    //Formulario

    <string name="tvTitulo">Cadastro de jogos</string>
    <string name="etNome">Nome do jogo</string>
    <string name="etPublicadora">Publicadora(s)</string>
    <string name="etDesenvolvedor">"Desenvolvedora(s) "</string>
    <string name="etSerie">Série</string>
    <string name="etPlataforma">Plataforma(s)</string>
    <string name="etLancamento">Lançamento</string>
    <string name="etGenero">Gênero(s)</string>
    <string name="btnSalvar">Salvar</string>
    <string name="btnVoltar">Voltar</string>

    //Novo Usuario
    <string name="btnSalvarUsuario">Salvar</string>
    <string name="edtSenhaUsuario">Senha</string>
    <string name="edtNomeUsuario">Digite nome de usuário</string>
    <string name="edtEmailUsuario">E-mail</string>
    <string name="edtConfirmarSenha">Confirmar senha</string>
    <string name="btnAdicionar">Adicionar novo jogo.</string>

</resources>
