<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/bg1">

    <ImageView
        android:id="@+id/imCrown"
        android:layout_width="141dp"
        android:layout_height="108dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="136dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="136dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coroa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imCrown"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="122dp"
        android:background="#00FFFFFF"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtLogin"
            style="@style/login"
            android:layout_width="324dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/edtLogin"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/edtSenha"
            style="@style/login"
            android:layout_width="324dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/edtSenha"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="172dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:background="#1AFFFFFF"
            android:text="@string/btnlogin"
            android:textColor="#ffff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="14dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="-3dp"
        android:layout_marginBottom="103dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="@string/tvPergunta"
            android:textColor="#ffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@null"
            android:text="@string/btnCadastrar"
            android:textColor="#E8C607" />

    </LinearLayout>


</RelativeLayout>