<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NovoUsuario"
    android:background="@drawable/bg1">

    <ImageView
        android:id="@+id/imCrown"
        android:layout_width="141dp"
        android:layout_height="108dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="136dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="136dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coroa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imCrown"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="122dp"
        android:background="#00FFFFFF"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtEmailUsuario"
            style="@style/login"
            android:layout_width="324dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/edtEmailUsuario"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtNomeUsuario"
            style="@style/login"
            android:layout_width="324dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/edtNomeUsuario"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtSenhaUsuario"
            style="@style/login"
            android:layout_width="324dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/edtSenhaUsuario"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edtConfirmarSenha"
            style="@style/login"
            android:layout_width="324dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/edtConfirmarSenha"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnSalvarUsuario"
            android:layout_width="172dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:background="#1AFFFFFF"
            android:text="@string/btnSalvarUsuario"
            android:textColor="#ffff"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imbVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="363dp"
        android:backgroundTint="#128A8A8A"
        app:srcCompat="@drawable/abc_vector_test" />
</RelativeLayout>